# coordcard

./: .gitignore  CHANGELOG.md  NEXT_IDEAS.md  README.md  ROADMAP.md  package.json  tsconfig.json  v0.2_PROPOSAL.md
docs/: FIELD_REPORT_OPENCLAW.md  INVARIANT_IDS_CONVENTION.md  MONETIZATION_AND_ETHICS.md  PHILOSOPHY_TOROID.md  PLUG_AND_PLAY.md  REFUSAL_FORMAT.md  SERVICES.md  SETUP_AND_NEGOTIATION.md
examples/: coordcard-minimal.json  coordcard-multicycle-demo.json  coordcard-strict.json  coordcard-v0.2-example.json  test-vector-v0.1-level2-specificity.json  test-vector-v0.2-adversarial-flat-drift.json  test-vector-v0.2-asymmetric-noncompliance.json  test-vector-v0.2-late-onset-O3.json  test-vector-v0.2-noisy-scoring-robustness.json  test-vector-v0.2-normal-drift-recovery.json  test-vector-v0.2-oscillation-threshold-hopping.json  test-vector-v0.2-restate-invariants-autopop.json
expected/: test-vector-v0.1-level2-specificity.expected.json  test-vector-v0.2-adversarial-flat-drift.expected.json  test-vector-v0.2-asymmetric-noncompliance.expected.json  test-vector-v0.2-late-onset-O3.expected.json  test-vector-v0.2-noisy-scoring-robustness.expected.json  test-vector-v0.2-normal-drift-recovery.expected.json  test-vector-v0.2-oscillation-threshold-hopping.expected.json  test-vector-v0.2-restate-invariants-autopop.expected.json
playground/: index.html  package.json  vite.config.ts
python/: README.md  pyproject.toml
python/coordcard/: __init__.py  cli.py  next_step.py  run_vector.py  state.py  validate.py
schema/: coordcard.v0.1.schema.json  coordcard.v0.2.schema.json
(+16 files in other folders)
